# attracts_bridge

./: .repos  CMakeLists.txt  README.md  package.xml
.github/workflows/: ci.yml
include/attracts_bridge/: stm32_bridge_node.hpp  transceiver_module_bridge_node.hpp
launch/: stm32_bridge.launch.py  stm32_bringup.launch.py  transceiver_module_bridge.launch.py
src/: stm32_bridge_main.cpp  stm32_bridge_node.cpp  transceiver_module_bridge_main.cpp  transceiver_module_bridge_node.cpp
test/: test_crc.cpp  test_process_frame.cpp  test_stm32_bridge.cpp
